updated the styling for the form. fixed issue with link not centering. button is still too big, to fix.

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -87,6 +87,7 @@
 .action-button{
   background-color:#c88995;
   border-color: #c88995;
+  font-size: 1.2em;
 }
 
 .action-button:hover{
@@ -120,6 +121,25 @@
 
 .inlineButton {
   display: inline;
+}
+
+.form-style{
+  background-color: #e4d7db;
+}
+
+.dark-pink-text{
+  color: #c88995;
+  text-decoration: none;
+  font-size: 1.3em;
+}
+
+.return-link{
+  text-align: center;
+}
+
+.return-link:hover{
+  color: #2a6328;
+  text-decoration: underline;
 }
 
 body{
